<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".activities.MenuPrincipal">

   <LinearLayout
       android:layout_width="match_parent"
       android:layout_height="wrap_content">

       <TextView
           android:id="@+id/textView1"
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:textAppearance="?android:attr/textAppearanceLarge" />

       <LinearLayout
           android:id="@+id/layoutCorFundo"
           android:layout_width="fill_parent"
           android:layout_height="match_parent"
           android:background="#efa95e"
           android:gravity="center" >

           <TextView
               android:id="@+id/textView2"
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"
               android:text="@string/titulo"
               android:textAppearance="?android:attr/textAppearanceLarge"
               android:textColor="#ffffff"
               android:textSize="20sp" />
       </LinearLayout>

   </LinearLayout>

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/escolha_opcao_abaixo"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="fill_parent"
        android:gravity="center"
        android:orientation="vertical">

        <Button
            android:id="@+id/btcadastrar_ferramenta"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:text="@string/btn_cadastrar_ferramenta" />

        <Button
            android:id="@+id/btalterar_dados"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:text="@string/btn_alterar_dados" />

        <Button
            android:id="@+id/btconsultar_ferramenta"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:text="@string/btn_consultar_ferramenta" />

        <Button
            android:id="@+id/btexcluir_ferramenta"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:text="@string/btn_excluir_ferramenta" />
    </LinearLayout>

</LinearLayout>