<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".activities.ExcluirFerramenta">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#3ba0e2">

        <TextView
            android:id="@+id/textView1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge" />

        <LinearLayout
            android:id="@+id/layoutCorFundo"
            android:layout_width="fill_parent"
            android:layout_height="match_parent"
            android:background="#efa95e"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/excluir_dados"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:textColor="#ffffff" />

        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:orientation="vertical"
        android:padding="14dp"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingBottom="10dp"
            android:text="@string/visualize_info_abaixo"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <TextView
            android:id="@+id/textView4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingBottom="5dp"
            android:text="@string/nome_da_ferramenta"
            android:textColor="#000000"
            android:textColorHint="#000000" />

        <TextView
            android:id="@+id/txtnome_ferramenta"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:paddingBottom="5dp"
            android:text="@string/nome_da_ferramenta"
            android:textColor="#c38a4c"
            android:textSize="15sp" />

        <TextView
            android:id="@+id/textView5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingBottom="5dp"
            android:text="@string/fabricante"
            android:textColor="#000000"
            android:textColorHint="#000000" />

        <TextView
            android:id="@+id/txtfabricante"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:paddingBottom="5dp"
            android:text="@string/fabricante"
            android:textColor="#c38a4c"
            android:textSize="15sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="160dp"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:paddingBottom="5dp">

                <TextView
                    android:id="@+id/TextView01"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingBottom="5dp"
                    android:text="@string/preco"
                    android:textColor="#000000"
                    android:textColorHint="#000000" />

                <TextView
                    android:id="@+id/txtpreco"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:text="@string/preco"
                    android:textColor="#c38a4c"
                    android:textSize="15sp" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="160dp"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/TextView02"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingBottom="5dp"
                    android:text="@string/cor"
                    android:textColor="#000000"
                    android:textColorHint="#000000" />

                <TextView
                    android:id="@+id/txtcor"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:text="@string/cor"
                    android:textColor="#c38a4c"
                    android:textSize="15sp" />

            </LinearLayout>

        </LinearLayout>

        <TextView
            android:id="@+id/textView6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingBottom="5dp"
            android:text="@string/referencia"
            android:textColor="#000000" />

        <TextView
            android:id="@+id/txtreferencia"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:paddingBottom="5dp"
            android:text="@string/referencia"
            android:textColor="#c38a4c"
            android:textSize="15sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="fill_parent"
            android:layout_gravity="center"
            android:gravity="center">

            <Button
                android:id="@+id/btexcluir_ferramenta"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:text="@string/excluir_ferramenta" />

            <Button
                android:id="@+id/btfechar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/btn_fechar" />

        </LinearLayout>

    </LinearLayout>

</LinearLayout>